[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/ShipML.gd" type="Script" id=1]
[ext_resource path="res://Audio/SFX/ShipFX/shot.wav" type="AudioStream" id=2]
[ext_resource path="res://Graphics/Shields/green_shield_03.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Shields/red_shield_01.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Shields/green_shield_01.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Shields/red_shield_02.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Shields/green_shield_02.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Shields/red_shield_03.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Shields/yellow_shield_01.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Shields/yellow_shield_03.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Shields/blue_shield_03.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Shields/yellow_shield_02.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Shields/blue_shield_02.png" type="Texture" id=13]
[ext_resource path="res://Graphics/Shields/blue_shield_01.png" type="Texture" id=14]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 13 ), ExtResource( 11 ) ],
"loop": true,
"name": "blue",
"speed": 12.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 3 ) ],
"loop": true,
"name": "green",
"speed": 12.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "red",
"speed": 12.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": true,
"name": "yellow",
"speed": 12.0
} ]

[node name="ShipML" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="ShipPolygon" type="CollisionPolygon2D" parent="."]

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="HurtPolygon" type="CollisionPolygon2D" parent="HurtBox"]

[node name="ShieldArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldArea"]
scale = Vector2( 1.25, 1.25 )
shape = SubResource( 1 )

[node name="Shield" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
animation = "yellow"
offset = Vector2( 8, 0 )

[node name="Gun" type="Position2D" parent="."]
position = Vector2( 8, 0 )
scale = Vector2( 0.25, 0.25 )

[node name="Aim" type="Position2D" parent="."]
position = Vector2( 16, 0 )
scale = Vector2( 0.25, 0.25 )

[node name="Left" type="Position2D" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 0.25, 0.25 )

[node name="LeftRotate" type="Position2D" parent="."]
position = Vector2( 16, -6 )
scale = Vector2( 0.25, 0.25 )

[node name="RightRotate" type="Position2D" parent="."]
position = Vector2( 16, 6 )
scale = Vector2( 0.25, 0.25 )

[node name="ShootSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="animation_finished" from="Shield" to="." method="_on_Shield_animation_finished"]
